--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         display: flex;
         align-items:     center;
         justify-content: center;
+        position: relative;
       }
     </style>
     <link rel="stylesheet" href="./index.css" />
@@ -29,7 +30,10 @@
   <body>
     <div class="container">
       <div class="box">
-        <div class="circle"></div>
+        <div class="circle layer-0"></div>
+        <div class="circle layer-1"></div>
+        <div class="circle layer-2"></div>
+        <div class="circle layer-3"></div>
       </div>
     </div>
   </body>
