Add star button :wink:

--- a/index.html
+++ b/index.html
@@ -36,5 +36,9 @@
         <div class="circle layer-3"></div>
       </div>
     </div>
+    <div class="container">
+    <a class="github-button" href="https://github.com/otiai10/ripple-css-animation" data-size="large" data-show-count="true" aria-label="Star otiai10/ripple-css-animation on GitHub">Star</a>
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
+    </div>
   </body>
 </html>
