--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <title>Ripple CSS Animation - github.com/otiai10/ripple-css-animation</title>
+    <meta property="og:title" content="Ripple CSS Animation" />
+    <meta property="og:description" content="The very simple CSS to make ripple effect without JavaScript" />
+    <meta name="description" content="The very simple CSS to make ripple effect without JavaScript" />
+    <meta name="keywords" content="ripple,keyframe,animation,CSS,HTML">
+    <meta name="author" content="Hiromu OCHIAI">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
